deluge/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deluge
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: deluge
    spec:
      nodeSelector:
        kubernetes.io/hostname: biggs.radoncanyon.com
      volumes:
      - name: deluge
        hostPath:
          path: /dockerfs/deluge
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-nas1
      - name: deluge-secrets
        secret:
          secretName: deluge
      containers:
      - name: deluge
        image: linuxserver/deluge:112
        volumeMounts:
        - name: deluge
          subPath: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: deluge-secrets
          subPath: auth
          mountPath: /config/auth
          readOnly: true
        ports:
        - containerPort: 8112
          name: deluge-webui
        - containerPort: 19058
          name: deluge-daemon
        - containerPort: 22722
          name: deluge-bt
        readinessProbe:
          tcpSocket:
            port: deluge-bt
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: deluge-bt
          initialDelaySeconds: 15
          periodSeconds: 20
