deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  selector:
    app: deluge
  type: ClusterIP
  clusterIP: 10.100.105.79
  ports:
  - name: deluge
    port: 80
  - name: deluge-daemon
    port: 58846
  - name: deluge-bt
    port: 54199
