deluge/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deluge
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  tls:
  - hosts:
    - deluge.desertbluffs.com
    secretName: deluge-tls
  rules:
  - host: deluge.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: deluge
          servicePort: 80
